<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TodoList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_item">Edit Item</string>
    <string name="edit_item_text">Edit Item Below:</string>
    <string name="save_button">Save</string>
    <string name="empty_string">\"\"</string>
    <string name="emptyString" />
    <string name="foo_string">foo</string>
    <string name="enter_todo">Enter a todo</string>
    <string name="add_item">Add</string>
    <string name="title_activity_fragment_edit_dialog">Edit Dialog</string>
    <string name="name_string">Name</string>
    <string name="left_sq_bracket">[</string>
    <string name="priority_str">Priority</string>
    <string name="right_sq_bracket">]</string>

</resources>
