<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_string" />

    <TextView
        android:id="@+id/tvLSym"
        android:layout_alignBaseline="@+id/tvName"
        android:layout_toRightOf="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/left_sq_bracket" />

    <TextView
        android:id="@+id/tvPriority"
        android:layout_toRightOf="@+id/tvLSym"
        android:layout_alignBottom="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority_str" />

    <TextView
        android:id="@+id/tvRSym"
        android:layout_alignBaseline="@+id/tvName"
        android:layout_toRightOf="@+id/tvPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:text="@string/right_sq_bracket" />

</RelativeLayout>